Tried to fix alignment

--- a/style.css
+++ b/style.css
@@ -21,12 +21,6 @@
 	font-size: 25px;
 }
 
-#appbox {
-	margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
 #page {
 	margin-left: auto;
     margin-right: auto;
@@ -49,12 +43,6 @@ form {
 	text-decoration: underline;
 }
 
-#form {
-	margin-left: auto;
-    margin-right: auto;
-	width: 50%;
-}
-
 table {
 	height:500px;
 }
@@ -70,9 +58,14 @@ table {
 }
 
 #report {
-	width: 50%;
+	width: 70%;
 	font-family: Rockwell;
 	font-size: 30px;	
+	text-align: left;
+}
+
+#fill {
+	width:50%;
 }
 
 body{
@@ -82,10 +75,11 @@ body{
 
 ul {
 	text-decoration: none;
+	text-align: left;
 }
 
 li {
-	list-style-type: none;
+	list-style-type: disc;
 }
 
 #text {
